--- a/decoration.html
+++ b/decoration.html
@@ -19,25 +19,23 @@
 	<table width="800px" align="center" class="chapter">
 		<tr>
 			<td>
-				<a href="construction.html">Construction</a>
+				<a href="#">Construction</a>
 			</td>
 			<td>
-				<a href="decoration.html" >Decoration</a>
+				<a href="#" >Decoration</a>
 			</td>
 			<td>
-				<a href="utilities.html" >Utilities</a>
+				<a href="#" >Utilities</a>
 			</td>
 			<td>
-				<a href="water.html" >Saving water</a>
+				<a href="#" >Saving water</a>
 			</td>
 		</tr>
 	</table>
 	<table width="800px" align="center" class="news">
 		<tr>
 			<td width="70%">
-				<h2>About me</h2>
-				<br>
-				Hello! I'm Theo and I have 13 years old. I'm from Bucharest, Romania.
+				<h2>Decoration</h2>
 			</td>
 			<td>
 				<h2>Latest news</h2>
