Am pus ul si li in loc de td si tr

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>How to make a house Energy Efficient</title>
 </head>
 <body>
-	<table width="800px" align="center" class="title">	
+	<nav class="title">	
 		<tr>
 			<td width="80%">
 				<h1>How to make a house Energy Efficient</h1>
@@ -15,23 +15,24 @@
 				<h2><a href="contact.html">Contact</a></h2>
 			</td>
 		<tr>
-	</table>
-	<table width="800px" align="center" class="chapter">
-		<tr>
-			<td>
+	</nav>
+	<nav class="chapter">
+		<ul>
+			<li>
 				<a href="construction.html">Construction</a>
-			</td>
-			<td>
+			</li>
+			<li>
 				<a href="decoration.html" >Decoration</a>
-			</td>
-			<td>
+			</li>
+			<li>
 				<a href="utilities.html" >Utilities</a>
-			</td>
-			<td>
+			</li>
+			<li>
 				<a href="water.html" >Saving water</a>
-			</td>
-		</tr>
-	</table>
+			</li>
+		</ul>
+	</nav>
+	
 	<table width="800px" align="center" class="news">
 		<tr>
 			<td width="70%">
